appId: com.betok
tags:
  - e2e
  - video-interactions
---
- launchApp
- tapOn:
    id: "shareButton"
- tapOn:
    text: "OK"
- tapOn:
    id: "commentButton"
- tapOn:
    text: "Add a comment..."
- inputRandomPersonName
- tapOn:
    id: "sendButton"
- hideKeyboard
- tapOn:
    id: "closeButton"
- stopApp